# minimize-ninja

./: .gitignore  LICENSE  README.md  pyproject.toml
minimize_ninja/: __init__.py  cli.py  common.py  keynote.py
